--- a/src/maincss/styles.css
+++ b/src/maincss/styles.css
@@ -52,37 +52,11 @@ header a:hover {
 }
 
 .banner-home {
-  background-image: url('../assets/banner-home.png');
+  background-image: url("../assets/banner-home.png");
 }
 
 .banner-about {
-  background-image: url('../assets/banner-about.png');
-}
-
-.collapse {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  font-family: Montserrat;
-  background-color: #ff6060;
-  width: 1023px;
-  height: 52px;
-  border-radius: 5px;
-  color: white;
-  margin-top: 20px;
-  margin-bottom: 20px;
-  padding: 10px;
-  font-weight: 500;
-  font-size: 24px;
-  line-height: 34.22px;
-}
-.collapse h2 {
-  display: block;
-}
-.collapse i {
-  display: block;
-  height: 13.71px;
-  width: 30px;
+  background-image: url("../assets/banner-about.png");
 }
 
 .conteneur {
@@ -142,4 +116,4 @@ footer {
 }
 footer img {
   width: 122px;
-} /*# sourceMappingURL=styles.css.map */
+}/*# sourceMappingURL=styles.css.map */
