--- a/src/components/Carousel/carousel.css
+++ b/src/components/Carousel/carousel.css
@@ -10,7 +10,7 @@
   justify-content: space-between;
   color: white;
 }
-.carousel img {
+.carousel .banner-img {
   position: absolute;
   width: 100%;
   height: 100%;
@@ -20,6 +20,8 @@
   -o-object-position: center;
      object-position: center;
   border-radius: 25px;
+  opacity: 1;
+  transition: opacity 0.5s ease-in-out;
 }
 .carousel p {
   position: absolute;
@@ -38,8 +40,25 @@
   top: 160px;
   left: 20px;
 }
+.carousel .fa-chevron-left:active ~ .banner-img {
+  opacity: 0;
+}
 .carousel .fa-chevron-right {
   position: absolute;
   top: 160px;
   right: 20px;
-}/*# sourceMappingURL=Carousel.css.map */
+}
+.carousel .fa-chevron-right:active ~ .banner-img {
+  opacity: 0;
+}
+@keyframes fadein {
+  from {
+    opacity: 0%;
+  }
+  to {
+    opacity: 100%;
+  }
+}
+.carousel .fade {
+  animation: fadein 0.4s;
+}/*# sourceMappingURL=carousel.css.map */
