--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -10,7 +10,7 @@
   justify-content: space-between;
   color: white;
 
-  img {
+  .banner-img {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -18,6 +18,8 @@
     object-fit: cover;
     object-position: center;
     border-radius: 25px;
+    opacity: 1;
+    transition: opacity 0.5s ease-in-out;
   }
   p {
     position: absolute;
@@ -36,10 +38,27 @@
     position: absolute;
     top: 160px;
     left: 20px;
+    &:active ~ .banner-img {
+      opacity: 0;
+    }
   }
   .fa-chevron-right {
     position: absolute;
     top: 160px;
     right: 20px;
+    &:active ~ .banner-img {
+      opacity: 0;
+    }
+  }
+  @keyframes fadein {
+    from {
+      opacity: 0%;
+    }
+    to {
+      opacity: 100%;
+    }
+  }
+  .fade {
+    animation: fadein 0.4s;
   }
 }
