--- a/src/pages/Fiche/fiche.scss
+++ b/src/pages/Fiche/fiche.scss
@@ -5,7 +5,7 @@ $main-color: #ff6060;
   font-family: Montserrat;
 }
 
-.lodging-head {
+.lodging {
   display: flex;
   justify-content: space-between;
   align-items: start;
