Collapses intégrés a la page fiche logements
Pas oublier de changer la description
Les blocs gris de descriptions sont pas totalement collés a l en-tete. A fignoler.

--- a/src/pages/Fiche/fiche.css
+++ b/src/pages/Fiche/fiche.css
@@ -89,6 +89,16 @@
   color: #e3e3e3;
 }
 
+.details {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 48px;
+}
+.details .small {
+  width: 582px;
+}
+
 .round {
   width: 64px;
   height: 64px;
