--- a/src/pages/Fiche/fiche.scss
+++ b/src/pages/Fiche/fiche.scss
@@ -91,6 +91,15 @@ $main-color: #ff6060;
     }
   }
 }
+.details {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-bottom: 48px;
+  .small {
+    width: 582px;
+  }
+}
 .round {
   width: 64px;
   height: 64px;
