--- a/src/components/Collapse/collapse.css
+++ b/src/components/Collapse/collapse.css
@@ -10,13 +10,15 @@
   background-color: #ff6060;
   width: 1023px;
   height: 52px;
-  border-radius: 5px;
+  border-radius: 10px;
   color: white;
   margin-top: 30px;
   padding: 10px;
   font-weight: 500;
   font-size: 24px;
   line-height: 34.22px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .collapse h2 {
   display: block;
@@ -42,6 +44,8 @@
   box-sizing: border-box;
   background-color: #f6f6f6;
   overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
   transition: height ease 0.4s;
 }
 .content .description {
