--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -3,6 +3,9 @@ $main-color: #ff6060;
   box-sizing: border-box;
 }
 
+.conteneur-collapse {
+}
+
 .collapse {
   display: flex;
   justify-content: space-between !important;
@@ -11,13 +14,15 @@ $main-color: #ff6060;
   background-color: $main-color;
   width: 1023px;
   height: 52px;
-  border-radius: 5px;
+  border-radius: 10px;
   color: white;
   margin-top: 30px;
   padding: 10px;
   font-weight: 500;
   font-size: 24px;
   line-height: 34.22px;
+  margin-left: auto;
+  margin-right: auto;
 
   h2 {
     display: block;
@@ -44,7 +49,10 @@ $main-color: #ff6060;
   box-sizing: border-box;
   background-color: #f6f6f6;
   overflow: hidden;
+  margin-left: auto;
+  margin-right: auto;
   transition: height ease 0.4s;
+
   .description {
     padding: 15px;
     font-family: Montserrat;
