Mise en page collapses logement ameliorée

--- a/src/components/Collapse/collapse.css
+++ b/src/components/Collapse/collapse.css
@@ -19,6 +19,7 @@
   line-height: 34.22px;
   margin-left: auto;
   margin-right: auto;
+  z-index: 2;
 }
 .collapse h2 {
   display: block;
@@ -40,18 +41,26 @@
 .content {
   height: 0px;
   width: 1023px;
-  border-radius: 5px;
+  border-radius: 0px 0px 10px 10px;
   box-sizing: border-box;
   background-color: #f6f6f6;
   overflow: hidden;
   margin-left: auto;
   margin-right: auto;
+  margin-top: -10px;
+  z-index: -1;
   transition: height ease 0.4s;
+  position: relative;
 }
 .content .description {
-  padding: 15px;
+  padding: 30px 15px 15px 15px;
   font-family: Montserrat;
   font-weight: 20px;
   color: #ff6060;
   line-height: 20 px;
+}
+.content .description ul {
+  list-style-type: none;
+  padding-left: 0px;
+  margin: 0px;
 }/*# sourceMappingURL=collapse.css.map */
