Gestion de  l’erreur sur l’id d’une propriété
Voila en trois lignes de code c'est reglé. Ca renvoie sur la page erreur

 if (logement[0] === undefined) {
    return <Navigate to="/error" replace={true} />;
  }

--- a/src/maincss/styles.css
+++ b/src/maincss/styles.css
@@ -50,6 +50,12 @@ header a:hover {
   align-items: center;
   justify-content: center;
 }
+.banner h1 {
+  color: white;
+  font-family: Montserrat;
+  font-size: 48px;
+  line-height: 68.45px;
+}
 
 .banner-home {
   background-image: url("../assets/banner-home.png");
