--- a/src/maincss/styles.scss
+++ b/src/maincss/styles.scss
@@ -54,6 +54,13 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  h1 {
+    color: white;
+    font-family: Montserrat;
+    font-size: 48px;
+    line-height: 68.45px;
+  }
 }
 
 .banner-home {
