--- a/src/maincss/styles.css
+++ b/src/maincss/styles.css
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+}
+
 #root {
   width: 100%;
 }
@@ -17,14 +21,25 @@ header {
   justify-content: space-between;
   margin: 50px 10% 10px 10%;
 }
+@media (max-width: 470px) {
+  header {
+    margin: 15px auto 25px auto;
+    width: 335px;
+  }
+}
 header .biglogo {
   width: 210px;
 }
+@media (max-width: 470px) {
+  header .biglogo {
+    width: 145px;
+  }
+}
 header nav {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   width: 309px;
-  gap: 57px;
+  gap: 30px;
 }
 header a {
   display: block;
@@ -34,7 +49,12 @@ header a {
   font-size: 24px;
   line-height: 34.22px;
   text-decoration: none;
-  text-decoration: none;
+}
+@media (max-width: 470px) {
+  header a {
+    text-transform: uppercase;
+    font-size: 12px;
+  }
 }
 header a:hover {
   text-decoration: underline;
@@ -42,6 +62,7 @@ header a:hover {
 
 .banner {
   background-position: center;
+  background-size: 1240px;
   height: 223px;
   width: 1240px;
   border-radius: 20px;
@@ -49,6 +70,23 @@ header a:hover {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 31px;
+}
+@media (max-width: 470px) {
+  .banner {
+    width: 335px;
+    height: 111px;
+    border-radius: 10px;
+    justify-content: flex-start;
+    background-size: 600px;
+    background-position: 50%;
+  }
+}
+@media (max-width: 470px) {
+  .banner .banner-text {
+    width: 217px;
+    height: 48px;
+  }
 }
 .banner h1 {
   color: white;
@@ -56,9 +94,16 @@ header a:hover {
   font-size: 48px;
   line-height: 68.45px;
 }
+@media (max-width: 470px) {
+  .banner h1 {
+    margin-top: 0px;
+    font-size: 24px;
+    line-height: 24px;
+  }
+}
 
 .banner-home {
-  background-image: url("../assets/banner-home.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../assets/banner-home.png");
 }
 
 .banner-about {
@@ -120,6 +165,26 @@ footer {
   box-sizing: border-box;
   margin-top: 10px;
 }
+@media (max-width: 470px) {
+  footer {
+    padding-top: 25px;
+  }
+}
 footer img {
   width: 122px;
+}
+@media (max-width: 470px) {
+  footer .text-footer {
+    padding: 0px 12px 0px 12px;
+    width: 122px;
+    height: 40px;
+  }
+}
+@media (max-width: 470px) {
+  footer p {
+    margin-top: 0px;
+    margin-top: 0px;
+    font-size: 12px;
+    line-height: 17.11px;
+  }
 }/*# sourceMappingURL=styles.css.map */
