--- a/src/maincss/styles.scss
+++ b/src/maincss/styles.scss
@@ -1,5 +1,7 @@
 // Mes variable
-
+* {
+  box-sizing: border-box;
+}
 $main-color: #ff6060;
 #root {
   width: 100%;
@@ -20,14 +22,22 @@ header {
   align-items: center;
   justify-content: space-between;
   margin: 50px 10% 10px 10%;
+  @media (max-width: 470px) {
+    margin: 15px auto 25px auto;
+    width: 335px;
+  }
   .biglogo {
     width: 210px;
+    @media (max-width: 470px) {
+      width: 145px;
+    }
   }
+
   nav {
     display: flex;
-    justify-content: center;
+    justify-content: flex-end;
     width: 309px;
-    gap: 57px;
+    gap: 30px;
   }
 
   a {
@@ -38,7 +48,10 @@ header {
     font-size: 24px;
     line-height: 34.22px;
     text-decoration: none;
-    text-decoration: none;
+    @media (max-width: 470px) {
+      text-transform: uppercase;
+      font-size: 12px;
+    }
     &:hover {
       text-decoration: underline;
     }
@@ -47,6 +60,7 @@ header {
 
 .banner {
   background-position: center;
+  background-size: 1240px;
   height: 223px;
   width: 1240px;
   border-radius: 20px;
@@ -54,17 +68,38 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 31px;
+  @media (max-width: 470px) {
+    width: 335px;
+    height: 111px;
+    border-radius: 10px;
+    justify-content: flex-start;
+    background-size: 600px;
+    background-position: 50 % 75%;
+  }
+  .banner-text {
+    @media (max-width: 470px) {
+      width: 217px;
+      height: 48px;
+    }
+  }
 
   h1 {
     color: white;
     font-family: Montserrat;
     font-size: 48px;
     line-height: 68.45px;
+    @media (max-width: 470px) {
+      margin-top: 0px;
+      font-size: 24px;
+      line-height: 24px;
+    }
   }
 }
 
 .banner-home {
-  background-image: url('../assets/banner-home.png');
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
+    url('../assets/banner-home.png');
 }
 
 .banner-about {
@@ -129,7 +164,25 @@ footer {
   gap: 20px;
   box-sizing: border-box;
   margin-top: 10px;
+  @media (max-width: 470px) {
+    padding-top: 25px;
+  }
   img {
     width: 122px;
+  }
+  .text-footer {
+    @media (max-width: 470px) {
+      padding: 0px 12px 0px 12px;
+      width: 122px;
+      height: 40px;
+    }
+  }
+  p {
+    @media (max-width: 470px) {
+      margin-top: 0px;
+      margin-top: 0px;
+      font-size: 12px;
+      line-height: 17.11px;
+    }
   }
 }
