--- a/src/pages/Fiche/fiche.css
+++ b/src/pages/Fiche/fiche.css
@@ -43,8 +43,10 @@
   align-items: center;
   background-color: #ff6060;
   border-radius: 10px;
-  width: 115px;
+  min-width: 115px;
   height: 25px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .lodging_right {
   display: flex;
