--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -2,14 +2,26 @@
   box-sizing: border-box;
 }
 
+.conteneur {
+  @media (max-width: 470px) {
+    width: 100%;
+  }
+}
+
 .carousel {
   position: relative;
   width: 1240px;
   height: 415px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   color: white;
-
+  @media (max-width: 470px) {
+    width: 335px;
+    height: 255px;
+    margin: 0px auto 0px auto;
+    padding-bottom: 0px;
+  }
   .banner-img {
     position: absolute;
     width: 100%;
@@ -20,6 +32,10 @@
     border-radius: 25px;
     opacity: 1;
     transition: opacity 0.5s ease-in-out;
+    @media (max-width: 470px) {
+      border-radius: 10px;
+      height: 255px;
+    }
   }
   p {
     position: absolute;
@@ -29,15 +45,25 @@
     font-weight: 500;
     font-size: 18px;
     line-height: 25.67px;
+    @media (max-width: 470px) {
+      display: none;
+    }
   }
   i {
     font-size: 96px;
+    @media (max-width: 470px) {
+      font-size: 20px;
+    }
   }
 
   .fa-chevron-left {
     position: absolute;
     top: 160px;
     left: 20px;
+    @media (max-width: 470px) {
+      top: 117px;
+      left: 10px;
+    }
     &:active ~ .banner-img {
       opacity: 0;
     }
@@ -46,6 +72,10 @@
     position: absolute;
     top: 160px;
     right: 20px;
+    @media (max-width: 470px) {
+      top: 117px;
+      right: 10px;
+    }
     &:active ~ .banner-img {
       opacity: 0;
     }
