--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -21,6 +21,9 @@ $main-color: #ff6060;
   margin-left: auto;
   margin-right: auto;
   z-index: 2;
+  @media (max-width: 470px) {
+    margin-top: 18px;
+  }
   h2 {
     display: block;
   }
