--- a/src/maincss/styles.css
+++ b/src/maincss/styles.css
@@ -6,9 +6,15 @@
   width: 100%;
 }
 
+html {
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
 body {
   margin: 0px;
-  height: 100%;
+  height: -moz-fit-content;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -80,6 +86,8 @@ header a:hover {
     justify-content: flex-start;
     background-size: 600px;
     background-position: 50%;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 @media (max-width: 470px) {
@@ -107,7 +115,12 @@ header a:hover {
 }
 
 .banner-about {
-  background-image: url("../assets/banner-about.png");
+  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url("../assets/banner-about.png");
+}
+@media (max-width: 470px) {
+  .banner-about {
+    margin-bottom: 20px;
+  }
 }
 
 .conteneur {
@@ -130,15 +143,38 @@ header a:hover {
   gap: 100px;
   padding-bottom: 100px;
 }
+@media (max-width: 470px) {
+  .error {
+    width: 335px;
+    font-size: 96px;
+    font-height: 136.9px;
+    margin-top: 90px;
+  }
+}
 .error h1 {
   font-weight: 700;
   font-size: 288px;
   margin: 0px;
 }
+@media (max-width: 470px) {
+  .error h1 {
+    font-size: 96px;
+    line-height: 136.9px;
+    margin-top: 20px;
+  }
+}
 .error h2 {
   font-weight: 500;
   font-size: 36px;
   line-height: 51.34px;
+}
+@media (max-width: 470px) {
+  .error h2 {
+    font-size: 18px;
+    line-height: 25.67px;
+    margin: 0px;
+    width: 226px;
+  }
 }
 .error a {
   color: #ff6060;
@@ -146,6 +182,12 @@ header a:hover {
   font-weight: 500;
   font-size: 18px;
   line-height: 25.67px;
+}
+@media (max-width: 470px) {
+  .error a {
+    font-size: 14px;
+    font-height: 19.96px;
+  }
 }
 
 footer {
@@ -163,11 +205,13 @@ footer {
   line-height: 34.22px;
   gap: 20px;
   box-sizing: border-box;
-  margin-top: 10px;
+  margin-top: 50px;
 }
 @media (max-width: 470px) {
   footer {
     padding-top: 25px;
+    margin-top: 10px;
+    margin-bottom: 0px;
   }
 }
 footer img {
