--- a/src/pages/Fiche/fiche.scss
+++ b/src/pages/Fiche/fiche.scss
@@ -177,6 +177,7 @@ body {
       width: 335px;
       height: 30px;
       border-radius: 5px;
+      margin-top: 0px;
     }
     h2 {
       @media (max-width: 470px) {
