--- a/src/components/Collapse/collapse.css
+++ b/src/components/Collapse/collapse.css
@@ -13,7 +13,7 @@
   border-radius: 10px;
   color: white;
   margin-top: 30px;
-  padding: 10px;
+  padding: 10px 21px 10px 21px;
   font-weight: 500;
   font-size: 24px;
   line-height: 34.22px;
@@ -27,6 +27,7 @@
   }
 }
 .collapse h2 {
+  font-size: 24px;
   display: block;
 }
 .collapse i {
