--- a/src/pages/Fiche/fiche.css
+++ b/src/pages/Fiche/fiche.css
@@ -210,6 +210,10 @@ body {
     margin-top: 0px;
   }
 }
+.details .small h2 {
+  font-size: 18px;
+  line-height: 25.67px;
+}
 @media (max-width: 470px) {
   .details .small h2 {
     font-size: 13px;
